# secp256k1

./: .gitmodules  CMakeLists.txt  README.md  secp256k1.pc.in
include/: secp256k1.h
misc/: create_keypair.c
src/: add_scalar.c  keypair.c  sign.c  verify.c
